CSS in progress

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="Serverchik.ico">
 </head>
 <body>
-    <h1> Дескрипторы </h1>
+    <h1 align="center"> Дескрипторы </h1>
     <!--<h2>Заголовок 2</h2>
     <h3>Заголовок 3</h3>
     <h4>Заголовок 4</h4>
@@ -34,5 +34,7 @@
    <tt><b>&#060;strong&#062;</b>(Bold)</tt> &#8212; парный строчный дискриптор, который делает текст <strong>жирным</strong>.<br>
    <tt><b>&#060;em&#062;</b>(Emphasize)</tt> &#8212; парный строчный дискриптор, который делает текст <em>курсивным</em>.<br>
    <tt><b>&lt;code&gt;</b>(TbirTbir)</tt> &#8212; парный строчный дискриптор, который делает текст <code>Мрножирным</code>.<br>
+    <hr>
+    <h2>Css - Cascade Style Sheet</h2>
 </body>
 </html>
