--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
    <tt><b>&#060;b&#062;</b>(Bold)</tt> &#8212; парный строчный дискриптор, который делает текст <b>жирным</b>.<br>
    <tt><b>&#060;i&#062;</b>(Italic)</tt> &#8212; парный строчный дискриптор, который делает текст <i>курсивным</i>.<br>
    <tt><b>&#060;u&#062;</b>(Underline)</tt> &#8212; парный строчный дискриптор, который делает текст <u>подчеркнутым</u>.<br>
-   <tt><b>&lt;tt&gt;</b>(TbirTbir)</tt> &#8212; парный строчный дискриптор, который делает текст <tt>Мрножирным</tt>.<br>
     
     <hr>
     <h2>Дескрипторы физического форматирования</h2>
@@ -36,5 +35,7 @@
    <tt><b>&lt;code&gt;</b>(TbirTbir)</tt> &#8212; парный строчный дискриптор, который делает текст <code>Мрножирным</code>.<br>
     <hr>
     <h2>Css - Cascade Style Sheet</h2>
+    <h2>Cписки</h2>
+   <tt><b>&lt;tt&gt;</b>(OrderList)</tt> &#8212; парный строчный дискриптор, который делает текст <tt>Мрножирным</tt>.<br>
 </body>
 </html>
