--- a/cpu.html
+++ b/cpu.html
@@ -15,8 +15,8 @@
 <body>
     <h1>
         Современные десктопные процессоры архитектуры x86
-        общие принципы работы (x86 CPU digest 2.0)
     </h1>
+    <h2>общие принципы работы (x86 CPU digest 2.0)</h2>
 
     <p>Этот материал представляет собой обновлённую, существенно переработанную и дополненную версию статьи 2006 года, которая называлась «Современные десктопные процессоры архитектуры x86: общие принципы работы (x86 CPU FAQ 1.0)». Правда, чтобы не вводить потенциальных читателей в заблуждение словом «FAQ», мы решили назвать новый материал более правильным, как нам кажется, термином — «дайджест». Действительно, ведь большая его часть — это не ответы на конкретные вопросы, а разъяснения и краткие выжимки из чего угодно — от технической документации до истории развития микропроцессорной отрасли. Для кого предназначен данный материал? Нам видятся две группы потенциальных читателей.
     </p>
@@ -26,6 +26,20 @@
     <p>Вторая группа — это те, кто не найдёт в статье почти ничего нового для себя — но им попросту лень писать нечто похожее самостоятельно, чтобы сосредоточить разбросанные по мозгу знания в одном месте, «причесать» их, систематизировать, упорядочить, осовременить, и так далее. Мы сами отлично понимаем, как бывает лениво писать конспекты :) (а особенно — хорошие конспекты), поэтому если наш дайджест вас устраивает — мы с радостью дарим вам возможность им пользоваться.</p>
 
     <p> Ну и традиционное предупреждение: если иное не указано явно, то слово «процессор» в данном материале обозначает «x86(-64) процессор, предназначенный для установки в десктопы или (намного реже) мобильные компьютеры». Серверные процессоры, специализированные процессоры с архитектурой x86, всевозможные embedded-варианты — всё это в рамках статьи не рассматривается.</p>
+
+    <h2>Содержание</h2>
+    <ol>
+        <li>Введение
+        <ul>
+            <li>Общее устройство вычеслительной машины</li>
+            <li>Код и данные - основной принцип работы CPU</li>
+            <li>Контроллер памяти</li>
+            <li>Процессорная шина</li>
+        </ul>
+        </li>
+        <li>Оперативная память</li>
+        <li>Понятия архитектуры</li>
+    </ol>
 
     <h2>Введение</h2>
 
