--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta charset="utf-8" />
     <title>Введение в HTML</title>
     <link rel="icon" href="Serverchik.ico">
+    <link rel="stylesheet" href="style.css">
+    <style>
+        body
+        {
+            font-size:24px;
+        }
+    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1 align="center"> Дескрипторы </h1>
