--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <link rel="icon" href="Serverchik.ico">
     <link rel="stylesheet" href="style.css">
     <style>
-        body
-        {
-            font-size:24px;
+        body {
+            font-size: 24px;
         }
     </style>
     <link rel="stylesheet" href="style.css">
