--- a/intro.html
+++ b/intro.html
@@ -13,6 +13,8 @@
     <ol>
         <li><a href="index.html">Intro</a></li>
         <li><a href="cpu.html">CPU</a></li>
+        <li><a href="forms.html">WebForms</a></li>
+        <li><a href="mendel.html">Mendel</a></li>
     </ol>
 </body>
 </html>
