--- a/calc.html
+++ b/calc.html
@@ -40,8 +40,37 @@
 						<button>M+</button>
 					</div>
                     <div class="control-and-digital-buttons">
-                        <div class="control-buttons"></div>
-                        <div class="digital-buttons"></div>
+                        <div class="control-buttons">
+							<button>Backspace</button>
+							<button>CE</button>
+							<button>C</button>
+						</div>
+						<div class="digital-buttons">
+							<button>7</button>
+							<button>8</button>
+							<button>9</button>
+							<button>/</button>
+							<button>sqrt</button>
+
+
+							<button>4</button>
+							<button>5</button>
+							<button>6</button>
+							<button>*</button>
+							<button>%</button>
+
+							<button>1</button>
+							<button>2</button>
+							<button>3</button>
+							<button>-</button>
+							<button>1/x</button>
+
+							<button>0</button>
+							<button>+/-</button>
+							<button>.</button>
+							<button>+</button>
+							<button>=</button>
+						</div>
 					</div>
 				</div>
 			</div>
