We are start work

--- a/index.html
+++ b/index.html
@@ -1,48 +1,16 @@
-﻿<!DOCTYPE html> <!--Эта строка определяет стандарт языка. В HTML 5 она всегда выглядит так-->
+﻿<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Введение в HTML</title>
-    <link rel="icon" href="Serverchik.ico">
-    <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            font-size: 24px;
-        }
-    </style>
+    <title>PD_411_WEB</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 align="center"> Дескрипторы </h1>
-    <!--<h2>Заголовок 2</h2>
-    <h3>Заголовок 3</h3>
-    <h4>Заголовок 4</h4>
-    <h5>Заголовок 5</h5>
-    <h6>Заголовок 6</h6>-->
-    <!-- p eto Paragraf ili je abzac-->
-    <p>
-        <b> Просто текст.</b> <i> Суда пиши </i> 
-    </p>
-    <p>
-        <b>tag</b> &mdash; Метка 
-    </p>
-    <hr>
-    <h2>Дескрипторы физического форматирования</h2>
-   <tt><b>&#060;p&#062;</b>(Paragraph)</tt> &#8212; парный блочный дискриптор, который показывает начало и конец абзаца.<br>
-   <tt><b>&#060;b&#062;</b>(Bold)</tt> &#8212; парный строчный дискриптор, который делает текст <b>жирным</b>.<br>
-   <tt><b>&#060;i&#062;</b>(Italic)</tt> &#8212; парный строчный дискриптор, который делает текст <i>курсивным</i>.<br>
-   <tt><b>&#060;u&#062;</b>(Underline)</tt> &#8212; парный строчный дискриптор, который делает текст <u>подчеркнутым</u>.<br>
-    
-    <hr>
-    <h2>Дескрипторы физического форматирования</h2>
-    <p>Являются аналогами физического форматирования, но лучше анализируются поисковыми машинами</p>
-   <tt><b>&#060;strong&#062;</b>(Bold)</tt> &#8212; парный строчный дискриптор, который делает текст <strong>жирным</strong>.<br>
-   <tt><b>&#060;em&#062;</b>(Emphasize)</tt> &#8212; парный строчный дискриптор, который делает текст <em>курсивным</em>.<br>
-   <tt><b>&lt;code&gt;</b>(TbirTbir)</tt> &#8212; парный строчный дискриптор, который делает текст <code>Мрножирным</code>.<br>
-    <hr>
-    <h2>Css - Cascade Style Sheet</h2>
-    <h2>Cписки</h2>
-   <tt><b>&lt;tt&gt;</b>(OrderList)</tt> &#8212; парный строчный дискриптор, который делает текст <tt>Мрножирным</tt>.<br>
+    <h1>WEB</h1>
+    <ul>
+        <li><a href="HTML/intro.html">HTML/CSS</a></li>
+        <li><a href="JavaScript/index.html">Java/CSS</a></li>
+    </ul>
 </body>
 </html>
