--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -8,28 +8,9 @@
 </head>
 <body>
     <h1>JavaScript</h1>
-    <h2>Factorial</h2>
-    <input type="number" min="0" placeholder="Исходное число" id="factorial-source" onchange="Factorial2()"/>
-    <div id="factorial-result"></div>
-    <script src="script.js"></script>
-    <script>
-        console.log("Hello World!");
-        //alert("Hello usweri");
-        //let data = prompt("Введите номер вашей кредитной карты");
-        //console.log(data);
-        //document.write("Ваши данные в безопасности, уверяем Вас");
-        //let variable;
-        //var v;
-        //const PI = 3.14;
-        //let helo = "Hello";
-        //let world = "World";
-        //document.write("7" * 5);
-        //document.write(2 / 0);
-        //alert(variable);
-        /*let n = prompt("TypeNumber: ");
-        document.write(`<hr>${n}! = ${Factorial(n)}<hr>`);*/
-
-        Factorial2();
-    </script>
+    <ol>
+        <li><a href="intro/intro.html">Introduction</a></li>
+        <li><a href="events/events.html">Events</a></li>
+    </ol>
 </body>
 </html>
