--- a/JavaScript/events/events.html
+++ b/JavaScript/events/events.html
@@ -43,6 +43,20 @@
         <div id="duration"></div>
         <div id="timestamp"></div>
     </div>
+    <div id="display">
+        <div class="time-block">
+            <div id="hours-unit" class="time-unit">HH</div>
+            <div id="hours-marker" class="time-marker">Hours</div>
+        </div>
+        <div class="time-block">
+            <div id="minutes-unit" class="time-unit">mm</div>
+            <div id="minutes-marker" class="time-marker">Minutes</div>
+        </div>
+        <div class="time-block">
+            <div id="seconds-unit" class="time-unit">ss</div>
+            <div id="seconds-marker" class="time-marker">Seconds</div>
+        </div>
+    </div>
     <script src="functions.js"></script>
 </body>
 </html>
