--- a/JavaScript/events/events.html
+++ b/JavaScript/events/events.html
@@ -107,8 +107,8 @@
     <hr>
     <div id="countdown-timer">
         <h2>Countdown timer</h2>
-        <input type="date" id="target-date" value="2026-03-08">
-        <input type="time" id="target-time" value="15:00">
+        <input type="date" id="target-date" value="2026-01-26">
+        <input type="time" id="target-time" value="15:59">
         <input type="button" id="btn-start" value="Start">
     </div>
     <div id="debug">
@@ -119,6 +119,7 @@
         <div id="timestamp"></div>
         <div id="value-type"></div>
     </div>
+        <h3 id="signature"></h3>
     <div id="display">
         <div class="time-block">
             <div id="hours-unit" class="time-unit"></div>
@@ -133,6 +134,9 @@
             <div id="seconds-marker" class="time-marker">Seconds</div>
         </div>
     </div>
+        <audio controls id="player" style="width:100%">
+            <source src="sound/Joe_Cocker_-_You_Can_Leave_Your_Hat_On_47950518.mp3">
+        </audio>
     <script src="functions.js"></script>
 </body>
 </html>
